# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("//foundation/multimedia/image_framework/ide/image_decode_config.gni")

config("ani_config") {
  include_dirs = [ "native/include" ]
}

group("image_framework_ani") {
  deps = [
    ":image_ani_core",
    ":image_framework_abc_etc",
  ]
}

ohos_shared_library("image_ani_core") {
  if (!use_clang_android) {
    sanitize = {
      cfi = true
      cfi_cross_dso = true
      cfi_vcall_icall_only = true
      debug = false
    }
  }
  include_dirs = [ "native/include" ]
  sources = [
    "native/src/ani_image_module.cpp",
    "native/src/image_ani_utils.cpp",
    "native/src/image_packer_ani.cpp",
    "native/src/image_source_ani.cpp",
    "native/src/picture_ani.cpp",
    "native/src/pixel_map_ani.cpp",
  ]
  deps = [
    "${image_subsystem}/frameworks/innerkitsimpl/utils:image_utils",
    "${image_subsystem}/interfaces/innerkits:image_native",
    "${image_subsystem}/interfaces/kits/js/common:image",
  ]
  external_deps = [
    "ability_runtime:ability_runtime",
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
    "runtime_core:ani",
    "runtime_core:libarkruntime",
    "runtime_core:ani_helpers",
  ]
  subsystem_name = "multimedia"
  part_name = "image_framework"
  output_extension = "so"
}

# APIs exposed to external modules
ohos_shared_library("image_ani") {
  public_configs = [ ":ani_config" ]
  if (!use_clang_android) {
    sanitize = {
      cfi = true
      cfi_cross_dso = true
      cfi_vcall_icall_only = true
      debug = false
    }
  }
  include_dirs = [ "native/include" ]
  sources = [
    "native/src/image_ani_utils.cpp",
    "native/src/image_packer_ani.cpp",
    "native/src/image_source_ani.cpp",
    "native/src/picture_ani.cpp",
    "native/src/pixel_map_ani.cpp",
  ]
  deps = [
    ":image_ani_core",
    "${image_subsystem}/frameworks/innerkitsimpl/utils:image_utils",
    "${image_subsystem}/interfaces/innerkits:image_native",
    "${image_subsystem}/interfaces/kits/js/common:image",
  ]
  external_deps = [
    "ability_runtime:ability_runtime",
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
    "runtime_core:ani",
    "runtime_core:libarkruntime",
    "runtime_core:ani_helpers",
  ]
  subsystem_name = "multimedia"
  part_name = "image_framework"
  output_extension = "so"
}

generate_static_abc("image_framework_abc") {
  base_url = "./ets"
  files = [ "./ets/@ohos.multimedia.image.ets" ]
  dst_file = "$target_out_dir/image_framework.abc"
  out_puts = [ "$target_out_dir/image_framework.abc" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/image_framework.abc"
}

ohos_prebuilt_etc("image_framework_abc_etc") {
  source = "$target_out_dir/image_framework.abc"
  module_install_dir = "framework"
  subsystem_name = "multimedia"
  part_name = "image_framework"
  deps = [ ":image_framework_abc" ]
}

generate_static_abc("image_framework_test_abc") {
  base_url = "./ets"
  files = [
    "./ets/imageTest.ets",
    "./ets/@ohos.multimedia.image.ets",
  ]
  dst_file = "$target_out_dir/image_framework_test.abc"
  out_puts = [ "$target_out_dir/image_framework_test.abc" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/image_framework_test.abc"
}
