# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("fuzztest") {
  testonly = true
  deps = [
    "imageaccessor_fuzzer:ImageAccessorFuzzTest",
    "imagefwkconvertastc2rgb_fuzzer:ImageFwkConvertAstc2RgbFuzzTest",
    "imagefwkconvertp010yuv2rgbext_fuzzer:ImageFwkConvertP010Yuv2RgbExtFuzzTest",
    "imagefwkdecodepicture_fuzzer:ImageFwkDecodePictureFuzzTest",
    "imagefwkimagesource_fuzzer:ImageFwkImageSourceFuzzTest",
    "imagegifencoder_fuzzer:ImageGifEnCoderFuzzTest",
    "imageheifimpl_fuzzer:ImageHeifImplFuzzTest",
    "imageinterfacepixelmap_fuzzer:ImageInterfacePixelmapFuzzTest",
    "imagepixelYuv_fuzzer:ImagePixelYuvFuzzTest",
    "imagepixelmapBase_fuzzer:ImagePixelmapBaseFuzzTest",
    "imagepixelmapGetColorARGB_fuzzer:ImagePixelmapGetColorARGBFuzzTest",
    "imagepixelmapHdr_fuzzer:ImagePixelmapHdrFuzzTest",
    "imagepixelmaphdr2_fuzzer:Imagepixelmaphdr2FuzzTest",
    "imagepixelmapMarshalling_fuzzer:ImagePixelmapMarshallingFuzzTest",
    "imagepixelmapmarshalling2_fuzzer:ImagePixelmapmarshalling2FuzzTest",
    "imagepixelmapSlrGpu_fuzzer:ImagePixelmapSlrGpuFuzzTest",
    "imagepixelmapTlv_fuzzer:ImagePixelmapTlvFuzzTest",
    "imagepixelmaptlv2_fuzzer:ImagePixelmaptlv2FuzzTest",
    "imagepixelmapsetalpha_fuzzer:ImagePixelmapSetAlphaFuzzTest",
    "imagepixelmapsetalpha2_fuzzer:ImagePixelmapsetalpha2FuzzTest",
    "imageplugin_fuzzer:ImagePluginFuzzTest",
    "imagepngplugin_fuzzer:ImagePngPluginFuzzTest",
    "imagepngplugin2_fuzzer:ImagePngPlugin2FuzzTest",
    "imagetextureencode_fuzzer:ImageTextureEncodeFuzzTest",
  ]
}
